--- a/site/_quarto-exe-demo.yml
+++ b/site/_quarto-exe-demo.yml
@@ -3,7 +3,7 @@ format:
     page-layout: full
     navbar: false
     code-tools: true
-    repo-actions: false
+    repo-actions: [issue]
     include-in-header: 
       - environments/heap-development.html
 execute: 
